--- a/html/index.html
+++ b/html/index.html
@@ -35,31 +35,703 @@
 </head>
 <body id='body' class="fullWidth">
 
-	<div class="background-wrap"></div>
+	<div class="background-wrap">
+		<div class="background-image kesha"></div>
+		<div class="background-image inna"></div>
+	</div>
 
 	<header>
-		<div class="banner">
-			<h1 class="text-center">
-				<span>D</span>irt 'n' <spam>G</spam>litter
-			</h1>
+		<div class="banner container">
+			<a class="a-colour-fix" href="#/" title="">
+				<h1 class="text-center">
+					<span>D</span>irt 'n' <span>G</span>litter
+				</h1>
+				<div class="tagline text-center">
+					<span>Drink</span> | <span>Plex</span> | <span>Welp</span> | <span>Repeat</span>
+				</div>
+			</a>
 		</div>
 	</header>
 
 	<section id="main">
+		<div class="container">
+			<div class="row">
 
-		<div class="page-title">
-			<h2 class="text-center">Dirt ‘n’ Glitter Loyalty Point leaderboards</h2>
+				<div class="page-title">
+					<h2 class="text-center">Dirt ‘n’ Glitter Loyalty Point Leaderboards</h2>
+				</div>
+
+				<div class="leaderboard col-md-12">
+					<h3 class="text-center">Plexing</h3>
+					<div class="table-wrap">
+						<table>
+							<thead>
+								<tr>
+									<th></th>
+									<th class="Name">
+										Name
+									</th>
+									<th class="Sites">
+										Sites
+									</th>
+									<th class="LP">
+										LP
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr class="member" data-rank="1">
+									<td>1</td>
+									<td class="pilot">
+										<a href="#" data-player-id="94614603" data-toggle="modal" data-target="#portrait" >Innar Mishi</a>
+									</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="2">
+									<td>2</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="3">
+									<td>3</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="4">
+									<td>4</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="5">
+									<td>5</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="6">
+									<td>6</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="7">
+									<td>7</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="8">
+									<td>8</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="9">
+									<td>9</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="10">
+									<td>10</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+							</tbody>
+							<tfoot>
+								<tr>
+									<td colspan="4">
+										<a href="#/" data-toggle="modal" data-target="#plexModal">
+											Full Leaderboard
+										</a>
+									</td>
+								</tr>
+							</tfoot>
+						</table>
+					</div>
+
+				</div>
+
+
+				<div class="leaderboard col-md-12">
+					<h3 class="text-center">PvP</h3>
+					<div class="table-wrap">
+						<table>
+							<thead>
+								<tr>
+									<th></th>
+									<th  class="Name">
+										Name
+									</th>
+									<th class="Sites">
+										Kills
+									</th>
+									<th class="LP">
+										LP
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr class="member" data-rank="1">
+									<td>1</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="2">
+									<td>2</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="3">
+									<td>3</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="4">
+									<td>4</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="5">
+									<td>5</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="6">
+									<td>6</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="7">
+									<td>7</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="8">
+									<td>8</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="9">
+									<td>9</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="10">
+									<td>10</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+							</tbody>
+							<tfoot>
+								<tr>
+									<td colspan="4">
+										<a href="#/" data-toggle="modal" data-target="#pvpModal">
+											Full Leaderboard
+										</a>
+									</td>
+								</tr>
+							</tfoot>
+						</table>
+					</div>
+				</div>
+
+				<div class="header-wrap col-xs-24">
+					<h2 class='text-center'>Top 10 Systems</h2>
+				</div>
+
+				<div class="top10 leaderboard col-md-12">
+					<h3 class='text-center'>Most Plexed</h3>
+					<div class="table-wrap">
+						<table>
+							<thead>
+								<tr>
+									<th></th>
+									<th>System</th>
+									<th>plexs</th>
+									<th>LP</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>Sahtogas</td>
+									<td>800</td>
+									<td>6000000</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+
+				<div class="top10 leaderboard col-md-12">
+					<h3 class='text-center'>Most Fought Over</h3>
+					<div class="table-wrap">
+						<table>
+							<thead>
+								<tr>
+									<th></th>
+									<th>System</th>
+									<th>Kills</th>
+									<th>LP</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>Sahtogas</td>
+									<td>320</td>
+									<td>60000</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+
+			</div><!--row-->
+		</div><!--container-->
+
+
+	</section>
+	<section id="modals">
+		<div id="pvpModal" class="modal fade" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-header">
+					<div class="name">Name</div>
+					<div class="sites">Kills</div>
+					<div class="lp">LP</div>
+				</div>
+				<!-- Modal content-->
+				<div class="modal-content">
+					<div class="modal-body">
+						<table>
+							<!--<thead>
+								<tr>
+									<th></th>
+									<th  class="Name">
+										Name
+									</th>
+									<th class="Sites">
+										Kills
+									</th>
+									<th class="LP">
+										LP
+									</th>
+								</tr>
+							</thead>-->
+							<tbody>
+								<tr class="member" data-rank="1">
+									<td>1</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="2">
+									<td>2</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="3">
+									<td>3</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="4">
+									<td>4</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="5">
+									<td>5</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="6">
+									<td>6</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="7">
+									<td>7</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="8">
+									<td>8</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="9">
+									<td>9</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="10">
+									<td>10</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="5">
+									<td>5</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="6">
+									<td>6</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="7">
+									<td>7</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="8">
+									<td>8</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="9">
+									<td>9</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="10">
+									<td>10</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="5">
+									<td>5</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="6">
+									<td>6</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="7">
+									<td>7</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="8">
+									<td>8</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="9">
+									<td>9</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="10">
+									<td>10</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="5">
+									<td>5</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="6">
+									<td>6</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="7">
+									<td>7</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="8">
+									<td>8</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="9">
+									<td>9</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="10">
+									<td>10</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+							</tbody>
+						</table>
+
+					</div><!-- modal-body -->
+					<div class="modal-footer"></div>
+				</div>
+
+			</div>
 		</div>
 
-		<div class="leaderboard col-md-12">
-			<h3 class="text-center">Plexing</h3>
+		<div id="plexModal" class="modal fade" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-header">
+					<div class="name">Name</div>
+					<div class="sites">Sites</div>
+					<div class="lp">LP</div>
+				</div>
+				<!-- Modal content-->
+				<div class="modal-content">
+					<div class="modal-body">
+						<table>
+							<tbody>
+								<tr class="member" data-rank="1">
+									<td>1</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="2">
+									<td>2</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="3">
+									<td>3</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="4">
+									<td>4</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="5">
+									<td>5</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="6">
+									<td>6</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="7">
+									<td>7</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="8">
+									<td>8</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="9">
+									<td>9</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="10">
+									<td>10</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="5">
+									<td>5</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="6">
+									<td>6</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="7">
+									<td>7</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="8">
+									<td>8</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="9">
+									<td>9</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="10">
+									<td>10</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="5">
+									<td>5</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="6">
+									<td>6</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="7">
+									<td>7</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="8">
+									<td>8</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="9">
+									<td>9</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="10">
+									<td>10</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="5">
+									<td>5</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="6">
+									<td>6</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="7">
+									<td>7</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="8">
+									<td>8</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="9">
+									<td>9</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+								<tr class="member" data-rank="10">
+									<td>10</td>
+									<td>Innar Mishi</td>
+									<td>666</td>
+									<td>3000000</td>
+								</tr>
+							</tbody>
+						</table>
 
+					</div><!-- modal-body -->
+					<div class="modal-footer"></div>
+				</div>
+
+			</div>
 		</div>
 
-		<div class="leaderboard col-md-12">
-			<h3 class="text-center">PvP</h3>
-			
+
+		<div id="portrait" class="modal fade" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-body">
+						<div class="portait-wrap">
+							<img src="https://imageserver.eveonline.com/Character/94614603_128.jpg" alt="">
+						</div>
+						<div class="character-info">
+
+							<dl>
+								<dt>Name:</dt>
+								<dd>Innar Mishi</dd>
+
+								<dt>Character Age:</dt>
+								<dd>Innar Mishi</dd>
+
+								<dt>DnG since:</dt>
+								<dd>Innar Mishi</dd>
+							</dl>
+							<div class="zkill"><a href="#/">zKillboard link</a></div>
+							<div class="evewho"><a href="#/">Eve Who link</a></div>
+						</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
+
 	</section>
 
 	<footer></footer>
@@ -69,6 +741,15 @@
 	<script src="js/jquery-1.11.3.min.js"></script>
 
 	<!-- Bootstrap core JavaScript -->
-	<script src="bootstrap/dist/js/bootstrap.min.js"></script>  
+	<script src="bootstrap/dist/js/bootstrap.min.js"></script> 
+	
+	<script>
+	jQuery(document).ready(function($) {
+		$('a.pilot').click(function(e) {
+			var replacementHTML = 'x';
+			.modal("show")
+		});
+	});
+	</script> 
 </body>
 </html>
